--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@ h1 {
 	margin-bottom: 20px;
 }
 
-#messages-container {
+#short-text-notes-container {
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-top: 20px;
+	height: 400px;
+	overflow-y: scroll;
+}
+
+#dm-container {
 	border: 1px solid #ccc;
 	padding: 10px;
 	margin-top: 20px;
@@ -18,4 +26,8 @@ h1 {
 
 .pubkey {
     color: blue;
+}
+
+.createdAt {
+    color: red;
 }
