--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ h1 {
 	overflow-y: scroll;
 }
 
+#long-text-notes-container {
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-top: 20px;
+	height: 400px;
+	overflow-y: scroll;
+}
+
 #dm-container {
 	border: 1px solid #ccc;
 	padding: 10px;
