--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ h1 {
 	overflow-y: scroll;
 }
 
+#metadata-container {
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-top: 20px;
+	height: 400px;
+	overflow-y: scroll;
+}
+
 .pubkey {
     color: blue;
 }
