--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ h1 {
 	margin-bottom: 20px;
 }
 
+/* #images-container {
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin-top: 20px;
+	height: 400px;
+	overflow-y: scroll;
+} */
+
 #short-text-notes-container {
 	border: 1px solid #ccc;
 	padding: 10px;
